# figma-plugin-figma_sync

./: .dockerignore  .gitignore  AI_USAGE_TIPS.md  ALIYUN_ECS_DEPLOY.md  ALIYUN_OSS_SETUP.md  DEPLOYMENT.md  Developer_Start_Server_Background.command  Dockerfile  GIF_EXPORT_ANALYSIS.md  MANUAL_INSTALL_LEGACY.md  Manual_Start_Server.command  PLUGIN_DESCRIPTION.md  README.md  VERSION.txt  adaptive-processing.js  aliyun-watcher.js  aliyunOSS.js  com.screensync.server.plist  deploy-cloud-run.sh  deploy-vercel.sh  deploy-web.sh  drive-watcher.js  emergency-update.sh  get-user-id.sh  gif-composer.js  google-drive.js  googleDrive.js  icloud-watcher.js  image-processor.js  install-and-run.sh  main.js  media-processing-tuning.js  package-core-update.sh  package-for-distribution.sh  package-for-icloud.sh  package-for-update.sh  package-icloud.sh  package.json  prepare-offline-runtime.sh  quick-config-oss.sh  (+19 more)
.backup-before-revert/: code.js  drive-watcher.js  gif-composer.js  server.js  ui.html  update-handlers.js  userConfig.js
ScreenSync-UserPackage/: README_插件介绍.txt
docs/: installer-no-terminal-design.md
figma-plugin/: code.js  manifest.json  qr-codes.js  ui.html
installer/: .npmrc  README.md  afterPack.js  build-installer.sh  clean-dist.sh  icon.icns  index.html  main.js  (+2 more)
installer-tauri/: README.md  create-clean-dmg.sh
installer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
installer-tauri/src-tauri/capabilities/: default.json
installer-tauri/src-tauri/dmg-resources/: create_dmg_bg  create_dmg_bg.swift
installer-tauri/src-tauri/src/: commands.rs  main.rs
(+20 files in other folders)
